--- a/environment.yml
+++ b/environment.yml
@@ -1,310 +1,112 @@
-name: master
-channels:
-  - pytorch
-  - nvidia
-  - conda-forge
-  - defaults
-dependencies:
-  - abseil-cpp=20230802.0=h5da7b33_2
-  - absl-py=2.1.0=py312haa95532_0
-  - aiohttp=3.9.5=py312h2bbff1b_0
-  - aiosignal=1.2.0=pyhd3eb1b0_0
-  - albumentations=1.3.1=pyhd8ed1ab_0
-  - aom=3.6.0=hd77b12b_0
-  - appdirs=1.4.4=pyhd3eb1b0_0
-  - asttokens=2.4.1=pyhd8ed1ab_0
-  - blas=1.0=mkl
-  - blinker=1.6.2=py312haa95532_0
-  - blosc=1.21.3=h6c2663c_0
-  - boost-cpp=1.74.0=h5b4e17d_6
-  - bottleneck=1.3.7=py312he558020_0
-  - brotli=1.0.9=ha925a31_2
-  - bzip2=1.0.8=h2bbff1b_5
-  - c-ares=1.19.1=h2bbff1b_0
-  - ca-certificates=2024.3.11=haa95532_0
-  - cachetools=5.3.3=py312haa95532_0
-  - cairo=1.16.0=haedb8bc_5
-  - certifi=2024.6.2=py312haa95532_0
-  - cffi=1.16.0=py312h2bbff1b_1
-  - cfitsio=3.470=h2bbff1b_7
-  - charls=2.2.0=h6c2663c_0
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - click=8.1.7=win_pyh7428d3b_0
-  - cloudpickle=2.2.1=py312haa95532_0
-  - colorama=0.4.6=pyhd8ed1ab_0
-  - comm=0.2.2=pyhd8ed1ab_0
-  - contourpy=1.2.0=py312h59b6b97_0
-  - cryptography=42.0.5=py312h89fc84f_1
-  - cuda-cccl=12.4.127=0
-  - cuda-cudart=11.8.89=0
-  - cuda-cudart-dev=11.8.89=0
-  - cuda-cupti=11.8.87=0
-  - cuda-libraries=11.8.0=0
-  - cuda-libraries-dev=11.8.0=0
-  - cuda-nvrtc=11.8.89=0
-  - cuda-nvrtc-dev=11.8.89=0
-  - cuda-nvtx=11.8.86=0
-  - cuda-profiler-api=12.4.127=0
-  - cuda-runtime=11.8.0=0
-  - cycler=0.12.1=pyhd8ed1ab_0
-  - dav1d=1.2.1=h2bbff1b_0
-  - debugpy=1.6.7=py312hd77b12b_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - docker-pycreds=0.4.0=pyhd3eb1b0_0
-  - eigen=3.4.0=h2d74725_0
-  - exceptiongroup=1.2.0=pyhd8ed1ab_2
-  - executing=2.0.1=pyhd8ed1ab_0
-  - expat=2.5.0=hd77b12b_0
-  - ffmpeg=4.2.3=ha925a31_0
-  - filelock=3.13.1=py312haa95532_0
-  - fontconfig=2.14.1=h9c4af85_2
-  - fonttools=4.25.0=pyhd3eb1b0_0
-  - freetype=2.12.1=ha860e81_0
-  - freexl=2.0.0=hd7a5696_0
-  - frozenlist=1.4.0=py312h2bbff1b_0
-  - gdal=3.6.2=py312h8827949_4
-  - geos=3.8.0=h33f27b4_0
-  - geotiff=1.7.0=h4545760_3
-  - giflib=5.2.1=h8cc25b3_3
-  - gitdb=4.0.7=pyhd3eb1b0_0
-  - gitpython=3.1.37=py312haa95532_0
-  - glib=2.78.4=hd77b12b_0
-  - glib-tools=2.78.4=hd77b12b_0
-  - google-auth=2.29.0=py312haa95532_0
-  - google-auth-oauthlib=0.4.1=py_2
-  - grpc-cpp=1.48.2=h6772dbd_4
-  - grpcio=1.48.2=py312h6772dbd_4
-  - gst-plugins-base=1.18.5=h9e645db_0
-  - gstreamer=1.18.5=hd78058f_0
-  - gtest=1.14.0=h59b6b97_0
-  - hdf4=4.2.13=h712560f_2
-  - hdf5=1.12.1=h51c971a_3
-  - icc_rt=2022.1.0=h6049295_2
-  - icu=58.2=ha925a31_3
-  - idna=3.4=py312haa95532_0
-  - imagecodecs=2023.1.23=py312hd5bf116_1
-  - imageio=2.34.1=pyh4b66e23_0
-  - importlib-metadata=7.1.0=pyha770c72_0
-  - importlib_metadata=7.1.0=hd8ed1ab_0
-  - intel-openmp=2023.1.0=h59b6b97_46320
-  - ipykernel=6.29.3=pyha63f2e9_0
-  - ipython=8.22.2=pyh7428d3b_0
-  - jedi=0.19.1=pyhd8ed1ab_0
-  - jinja2=3.1.3=py312haa95532_0
-  - joblib=1.4.2=pyhd8ed1ab_0
-  - jpeg=9e=h2bbff1b_1
-  - jupyter_client=8.6.1=pyhd8ed1ab_0
-  - jupyter_core=5.5.0=py312haa95532_0
-  - kealib=1.5.0=hde4a422_1
-  - kiwisolver=1.4.4=py312hd77b12b_0
-  - krb5=1.20.1=h5b6d351_0
-  - lazy_loader=0.4=pyhd8ed1ab_0
-  - lcms2=2.12=h83e58a3_0
-  - lerc=3.0=hd77b12b_0
-  - libaec=1.0.4=h33f27b4_1
-  - libavif=0.11.1=h2bbff1b_0
-  - libbrotlicommon=1.0.9=h2bbff1b_8
-  - libbrotlidec=1.0.9=h2bbff1b_8
-  - libbrotlienc=1.0.9=h2bbff1b_8
-  - libclang=14.0.6=default_hb5a9fac_1
-  - libclang13=14.0.6=default_h8e68704_1
-  - libcublas=11.11.3.6=0
-  - libcublas-dev=11.11.3.6=0
-  - libcufft=10.9.0.58=0
-  - libcufft-dev=10.9.0.58=0
-  - libcurand=10.3.5.147=0
-  - libcurand-dev=10.3.5.147=0
-  - libcurl=8.7.1=h86230a5_0
-  - libcusolver=11.4.1.48=0
-  - libcusolver-dev=11.4.1.48=0
-  - libcusparse=11.7.5.86=0
-  - libcusparse-dev=11.7.5.86=0
-  - libdeflate=1.17=h2bbff1b_1
-  - libffi=3.4.4=hd77b12b_0
-  - libgdal=3.6.2=h9a21643_4
-  - libglib=2.78.4=ha17d25a_0
-  - libiconv=1.17=h8ffe710_0
-  - libjpeg-turbo=2.0.0=h196d8e1_0
-  - libkml=1.3.0=h9859afa_1014
-  - libnetcdf=4.8.1=h6685c40_4
-  - libnpp=11.8.0.86=0
-  - libnpp-dev=11.8.0.86=0
-  - libnvjpeg=11.9.0.86=0
-  - libnvjpeg-dev=11.9.0.86=0
-  - libogg=1.3.4=h8ffe710_1
-  - libpng=1.6.39=h8cc25b3_0
-  - libpq=12.17=h906ac69_0
-  - libprotobuf=3.20.3=h23ce68f_0
-  - libsodium=1.0.18=h8d14728_1
-  - libspatialite=5.1.0=hbdd3232_0
-  - libssh2=1.10.0=he2ea4bf_3
-  - libtiff=4.5.1=hd77b12b_0
-  - libuv=1.44.2=h2bbff1b_0
-  - libvorbis=1.3.7=h0e60522_0
-  - libwebp=1.3.2=hbc33d0d_0
-  - libwebp-base=1.3.2=h2bbff1b_0
-  - libxml2=2.10.4=h0ad7f3c_2
-  - libxslt=1.1.37=h2bbff1b_1
-  - libzip=1.8.0=h289538f_1
-  - libzopfli=1.0.3=h0e60522_0
-  - llvmlite=0.42.0=py312hf2fb9eb_0
-  - lz4-c=1.9.4=h2bbff1b_0
-  - markdown=3.4.1=py312haa95532_0
-  - markupsafe=2.1.3=py312h2bbff1b_0
-  - matplotlib=3.8.4=py312haa95532_0
-  - matplotlib-base=3.8.4=py312hc7c4135_0
-  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - minizip=4.0.3=hb68bac4_0
-  - mkl=2023.1.0=h6b88ed4_46358
-  - mkl-service=2.4.0=py312h2bbff1b_1
-  - mkl_fft=1.3.8=py312h2bbff1b_0
-  - mkl_random=1.2.4=py312h59b6b97_0
-  - mpmath=1.3.0=py312haa95532_0
-  - multidict=6.0.4=py312h2bbff1b_0
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - nest-asyncio=1.6.0=pyhd8ed1ab_0
-  - networkx=3.1=py312haa95532_0
-  - numba=0.59.1=py312hc7c4135_0
-  - numexpr=2.8.7=py312h96b7d27_0
-  - numpy=1.26.4=py312hfd52020_0
-  - numpy-base=1.26.4=py312h4dde369_0
-  - oauthlib=3.2.2=py312haa95532_0
-  - opencv=4.6.0=py312h14b9924_5
-  - openjpeg=2.4.0=h4fc8c34_0
-  - openssl=3.0.13=h2bbff1b_1
-  - packaging=24.0=pyhd8ed1ab_0
-  - pandas=2.2.1=py312h0158946_0
-  - parso=0.8.4=pyhd8ed1ab_0
-  - pathtools=0.1.2=pyhd3eb1b0_1
-  - pcre2=10.42=h0ff8eda_1
-  - pickleshare=0.7.5=py_1003
-  - pillow=10.2.0=py312h2bbff1b_0
-  - pip=23.3.1=py312haa95532_0
-  - pixman=0.40.0=h2bbff1b_1
-  - planetary-computer=1.0.0=pyhd8ed1ab_0
-  - platformdirs=4.2.0=pyhd8ed1ab_0
-  - ply=3.11=pyhd8ed1ab_2
-  - poppler=22.12.0=h0bf3bde_3
-  - poppler-data=0.4.12=hd8ed1ab_0
-  - proj=9.3.1=ha107b6e_0
-  - prompt-toolkit=3.0.42=pyha770c72_0
-  - psutil=5.9.0=py312h2bbff1b_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - pybind11-abi=5=hd3eb1b0_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pydantic=1.10.12=py312h2bbff1b_1
-  - pygments=2.17.2=pyhd8ed1ab_0
-  - pyjwt=2.4.0=py312haa95532_0
-  - pyopenssl=24.0.0=py312haa95532_0
-  - pyparsing=3.0.9=pyhd8ed1ab_0
-  - pyqt=5.15.10=py312hd77b12b_0
-  - pyqt5-sip=12.13.0=py312h2bbff1b_0
-  - pystac=1.10.1=pyhd8ed1ab_0
-  - pystac-client=0.7.7=pyhd8ed1ab_0
-  - python=3.12.2=h1d929f7_0
-  - python-dateutil=2.9.0=pyhd8ed1ab_0
-  - python-dotenv=1.0.1=pyhd8ed1ab_0
-  - python-tzdata=2024.1=pyhd8ed1ab_0
-  - pytorch=2.2.2=py3.12_cuda11.8_cudnn8_0
-  - pytorch-cuda=11.8=h24eeafa_5
-  - pytorch-mutex=1.0=cuda
-  - pytz=2024.1=pyhd8ed1ab_0
-  - pywavelets=1.5.0=py312he558020_0
-  - pywin32=305=py312h2bbff1b_0
-  - pyyaml=6.0.1=py312h2bbff1b_0
-  - pyzmq=25.1.2=py312hd77b12b_0
-  - qhull=2020.2=h70d2c02_2
-  - qt-main=5.15.2=h879a1e9_9
-  - qt-webengine=5.15.9=h5bd16bc_7
-  - qtwebkit=5.212=h2bbfb41_5
-  - qudida=0.0.4=pyhd8ed1ab_0
-  - re2=2022.04.01=hd77b12b_0
-  - requests=2.31.0=py312haa95532_1
-  - requests-oauthlib=1.3.0=py_0
-  - scikit-image=0.22.0=py312h20b63e8_0
-  - scikit-learn=1.4.2=py312hc7c4135_1
-  - scipy=1.13.0=py312hbb039d4_0
-  - sentry-sdk=1.9.0=py312haa95532_0
-  - setproctitle=1.2.2=py312h2bbff1b_0
-  - setuptools=68.2.2=py312haa95532_0
-  - shap=0.42.1=py312hc7c4135_0
-  - sip=6.7.12=py312hd77b12b_0
-  - six=1.16.0=pyh6c4a22f_0
-  - slicer=0.0.7=pyhd3eb1b0_0
-  - smmap=4.0.0=pyhd3eb1b0_0
-  - snappy=1.1.10=h6c2663c_1
-  - sqlite=3.41.2=h2bbff1b_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - sympy=1.12=py312haa95532_0
-  - tbb=2021.8.0=h59b6b97_0
-  - tensorboard=2.6.0=py_0
-  - tensorboard-plugin-wit=1.6.0=py_0
-  - threadpoolctl=3.5.0=pyhc1e730c_0
-  - tifffile=2023.2.28=pyhd8ed1ab_0
-  - tiledb=2.3.3=hd8964de_3
-  - tk=8.6.12=h2bbff1b_0
-  - tornado=6.3.3=py312h2bbff1b_0
-  - tqdm=4.66.4=py312hfc267ef_0
-  - traitlets=5.14.2=pyhd8ed1ab_0
-  - typing-extensions=4.9.0=py312haa95532_1
-  - typing_extensions=4.9.0=py312haa95532_1
-  - tzdata=2024a=h04d1e81_0
-  - urllib3=2.1.0=py312haa95532_0
-  - vc=14.2=h21ff451_1
-  - vs2015_runtime=14.27.29016=h5e58377_2
-  - wandb=0.16.5=pyhd8ed1ab_0
-  - wcwidth=0.2.13=pyhd8ed1ab_0
-  - werkzeug=2.3.8=py312haa95532_0
-  - wheel=0.41.2=py312haa95532_0
-  - xerces-c=3.2.4=hd77b12b_1
-  - xz=5.4.6=h8cc25b3_0
-  - yaml=0.2.5=he774522_0
-  - yarl=1.9.3=py312h2bbff1b_0
-  - zeromq=4.3.5=hd77b12b_0
-  - zfp=1.0.0=hd77b12b_0
-  - zipp=3.17.0=pyhd8ed1ab_0
-  - zlib=1.2.13=h8cc25b3_0
-  - zstd=1.5.5=hd43e919_0
-  - pip:
-    - affine==2.4.0
-    - attrs==23.2.0
-    - backoff==2.2.1
-    - click-plugins==1.1.1
-    - cligj==0.7.2
-    - earthengine-api==0.1.401
-    - efficientnet-pytorch==0.7.1
-    - fiona==1.9.6
-    - fsspec==2024.3.1
-    - geopandas==0.14.4
-    - google-api-core==2.19.0
-    - google-api-python-client==2.127.0
-    - google-auth-httplib2==0.2.0
-    - google-cloud-core==2.4.1
-    - google-cloud-storage==2.16.0
-    - google-crc32c==1.5.0
-    - google-resumable-media==2.7.0
-    - googleapis-common-protos==1.63.0
-    - httplib2==0.22.0
-    - huggingface-hub==0.23.0
-    - munch==4.0.0
-    - opencv-python-headless==4.9.0.80
-    - pretrainedmodels==0.7.4
-    - proto-plus==1.23.0
-    - protobuf==4.25.3
-    - pyasn1==0.6.0
-    - pyasn1-modules==0.4.0
-    - pyproj==3.6.1
-    - rasterio==1.3.10
-    - restee==0.0.3
-    - rsa==4.9
-    - safetensors==0.4.3
-    - segmentation-models-pytorch==0.3.3
-    - shapely==2.0.4
-    - snuggs==1.4.7
-    - timm==0.9.2
-    - torchaudio==2.2.2
-    - torchvision==0.17.2
-    - uritemplate==4.1.1
-    - watermark==2.4.3
-    - xarray==2024.3.0
-prefix: C:\anaconda3\envs\master
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+@EXPLICIT
+https://conda.anaconda.org/conda-forge/linux-64/_libgcc_mutex-0.1-conda_forge.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/ca-certificates-2021.5.30-ha878542_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/ld_impl_linux-64-2.35.1-hea4e1c9_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libgfortran5-9.3.0-hff62375_19.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libstdcxx-ng-9.3.0-h6de172a_19.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/llvm-openmp-11.1.0-h4bd325d_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/mkl-include-2021.2.0-h726a3e6_389.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/mysql-common-8.0.25-ha770c72_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/_openmp_mutex-4.5-1_llvm.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libgfortran-ng-9.3.0-hff62375_19.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libgomp-9.3.0-h2828fa1_19.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libgcc-ng-9.3.0-h2828fa1_19.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/alsa-lib-1.2.3-h516909a_0.tar.bz2
+https://conda.anaconda.org/nvidia/linux-64/cudatoolkit-11.1.74-h6bb024c_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/expat-2.4.1-h9c3ff4c_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/icu-68.1-h58526e2_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/jbig-2.1-h7f98852_2003.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/jpeg-9d-h36c2ea0_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/lerc-2.2.1-h9c3ff4c_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libdeflate-1.7-h7f98852_5.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libffi-3.3-h58526e2_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libiconv-1.16-h516909a_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libogg-1.3.4-h7f98852_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libopenblas-0.3.15-pthreads_h8fe5266_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libopus-1.3.1-h7f98852_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libuuid-2.32.1-h7f98852_1000.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libuv-1.41.0-h7f98852_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libwebp-base-1.2.0-h7f98852_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/lz4-c-1.9.3-h9c3ff4c_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/ncurses-6.2-h58526e2_4.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/ninja-1.10.2-h4bd325d_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/nspr-4.30-h9c3ff4c_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/openssl-1.1.1k-h7f98852_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/pcre-8.45-h9c3ff4c_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/pthread-stubs-0.4-h36c2ea0_1001.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/tbb-2021.2.0-h4bd325d_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/xorg-libxau-1.0.9-h7f98852_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/xorg-libxdmcp-1.1.3-h7f98852_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/xz-5.2.5-h516909a_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/zlib-1.2.11-h516909a_1010.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/gettext-0.19.8.1-h0b5b191_1005.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libedit-3.1.20191231-he28a2e2_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libevent-2.1.10-hcdb4288_3.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libllvm11-11.1.0-hf817b99_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libpng-1.6.37-h21135ba_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libvorbis-1.3.7-h9c3ff4c_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libxcb-1.13-h7f98852_1003.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libxml2-2.9.12-h72842e0_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/mkl-2021.2.0-h726a3e6_389.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/readline-8.1-h46c0cb4_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/tk-8.6.10-h21135ba_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/zstd-1.5.0-ha95c52a_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/freetype-2.10.4-h0708190_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/krb5-1.19.1-hcc1bbae_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libblas-3.9.0-9_mkl.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libclang-11.1.0-default_ha53f305_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libglib-2.68.3-h3e27bee_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libtiff-4.3.0-hf544144_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libxkbcommon-1.0.3-he3ba5ed_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/mkl-devel-2021.2.0-ha770c72_390.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/mysql-libs-8.0.25-hfa10184_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/sqlite-3.36.0-h9cd32fc_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/fontconfig-2.13.1-hba837de_1005.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/glib-tools-2.68.3-h9c3ff4c_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/gstreamer-1.18.4-h76c114f_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/lcms2-2.12-hddcbb42_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libcblas-3.9.0-9_mkl.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/liblapack-3.9.0-9_mkl.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/libpq-13.3-hd57d9b9_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/nss-3.67-hb5efdd6_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/openjpeg-2.4.0-hb52868f_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/python-3.7.10-hffdb5ce_100_cpython.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/glib-2.68.3-h9c3ff4c_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/gst-plugins-base-1.18.4-hf529b03_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/liblapacke-3.9.0-9_mkl.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/olefile-0.46-pyh9f0ad1d_1.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/pyparsing-2.4.7-pyh9f0ad1d_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/python_abi-3.7-2_cp37m.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/six-1.16.0-pyh6c4a22f_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/threadpoolctl-2.1.0-pyh5ca1d4c_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/typing_extensions-3.10.0.0-pyha770c72_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/wheel-0.36.2-pyhd3deb0d_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/blas-devel-3.9.0-9_mkl.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/certifi-2021.5.30-py37h89c1867_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/cycler-0.10.0-py_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/dbus-1.13.6-h48d8840_2.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/kiwisolver-1.3.1-py37h2527ec5_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/numpy-1.21.0-py37h038b26d_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/pillow-8.2.0-py37h4600e1f_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/pyqt5-sip-4.19.18-py37hcd2ae1e_7.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/python-dateutil-2.8.1-py_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/tornado-6.1-py37h5e8e339_1.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/blas-2.109-mkl.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/qt-5.12.9-hda022c4_4.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/scipy-1.6.3-py37h29e03ee_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/setuptools-49.6.0-py37h89c1867_3.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/joblib-1.0.1-pyhd8ed1ab_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/matplotlib-base-3.4.2-py37hdd32ed1_0.tar.bz2
+https://conda.anaconda.org/conda-forge/noarch/pip-21.1.3-pyhd8ed1ab_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/pyqt-impl-5.12.3-py37he336c9b_7.tar.bz2
+https://conda.anaconda.org/pytorch/linux-64/pytorch-1.9.0-py3.7_cuda11.1_cudnn8.0.5_0.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/pyqtchart-5.12-py37he336c9b_7.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/pyqtwebengine-5.12.1-py37he336c9b_7.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/scikit-learn-0.24.2-py37h18a542f_0.tar.bz2
+https://conda.anaconda.org/pytorch/linux-64/torchaudio-0.9.0-py37.tar.bz2
+https://conda.anaconda.org/pytorch/noarch/torchvision-0.2.2-py_3.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/pyqt-5.12.3-py37h89c1867_7.tar.bz2
+https://conda.anaconda.org/conda-forge/linux-64/matplotlib-3.4.2-py37h89c1867_0.tar.bz2
